[gd_scene load_steps=14 format=3 uid="uid://0c8id4nsm8hd"]

[ext_resource type="Texture2D" uid="uid://cwlkhbaq35aie" path="res://enemy/art/playerGrey_up1.png" id="1_3kmul"]
[ext_resource type="Script" path="res://Player.gd" id="2_t0c86"]
[ext_resource type="PackedScene" uid="uid://dmr0fcamx7t56" path="res://joystick/virtual_joystick.tscn" id="3_nbnsp"]
[ext_resource type="Script" path="res://HUD.gd" id="3_xur8b"]
[ext_resource type="Texture2D" uid="uid://fjp8heyx6xdv" path="res://enemy/art/shoot_button.png" id="5_x262o"]
[ext_resource type="Script" path="res://Healthbar.gd" id="6_folfc"]
[ext_resource type="Texture2D" uid="uid://vkfw5wbvqu2v" path="res://enemy/art/HealthBack.png" id="7_bf6wh"]
[ext_resource type="Texture2D" uid="uid://b3rsjg7lq8skw" path="res://enemy/art/Healthover.png" id="8_22np4"]
[ext_resource type="Texture2D" uid="uid://dcohx7cp5slwt" path="res://enemy/art/HealthProcess.png" id="9_531ha"]
[ext_resource type="Texture2D" uid="uid://d2tif3apv21fl" path="res://enemy/art/armor_icon.png" id="10_rdh3s"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4lg4j"]
radius = 53.3333
height = 140.0

[sub_resource type="LabelSettings" id="LabelSettings_pbwi4"]
font_size = 60

[sub_resource type="LabelSettings" id="LabelSettings_hlvnn"]
font_size = 60

[node name="Player" type="Sprite2D"]
scale = Vector2(0.3, 0.3)
texture = ExtResource("1_3kmul")
script = ExtResource("2_t0c86")

[node name="Reload_speed" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Hitbox" type="Area2D" parent="." groups=["Pick_up"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("CapsuleShape2D_4lg4j")

[node name="Stun_timer" type="Timer" parent="Hitbox"]
wait_time = 0.1
one_shot = true

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource("3_xur8b")

[node name="Virtual_Joystick" parent="HUD" instance=ExtResource("3_nbnsp")]
offset_left = 30.0
offset_top = -120.0
offset_right = 180.0
offset_bottom = 30.0
scale = Vector2(0.6, 0.6)
action_left = "move_left"
action_right = "move_right"
action_up = "move_up"
action_down = "move_down"

[node name="Shoot_button" type="Button" parent="HUD"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -90.0
offset_top = -90.0
offset_right = 127.0
offset_bottom = 127.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(0.3, 0.3)
toggle_mode = true
icon = ExtResource("5_x262o")
flat = true

[node name="Healthbar" type="Control" parent="HUD"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("6_folfc")

[node name="Healthbar" type="TextureProgressBar" parent="HUD/Healthbar"]
layout_mode = 0
offset_left = 8.0
offset_top = 9.0
offset_right = 1152.0
offset_bottom = 131.0
scale = Vector2(0.2, 0.2)
value = 100.0
texture_under = ExtResource("7_bf6wh")
texture_over = ExtResource("8_22np4")
texture_progress = ExtResource("9_531ha")
tint_progress = Color(0, 1, 0, 1)

[node name="Hp_real" type="Label" parent="HUD/Healthbar/Healthbar"]
layout_mode = 0
offset_left = 440.0
offset_top = 12.0
offset_right = 542.0
offset_bottom = 112.0
text = "100"
label_settings = SubResource("LabelSettings_pbwi4")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Hp_max" type="Label" parent="HUD/Healthbar/Healthbar"]
layout_mode = 0
offset_left = 550.0
offset_top = 12.0
offset_right = 675.0
offset_bottom = 112.0
text = "/100"
label_settings = SubResource("LabelSettings_hlvnn")
vertical_alignment = 1

[node name="Armor" type="Label" parent="HUD"]
offset_left = 56.0
offset_top = 52.0
offset_right = 96.0
offset_bottom = 78.0
text = "0"

[node name="ArmorIcon" type="Sprite2D" parent="HUD/Armor"]
position = Vector2(-31, 10)
scale = Vector2(0.15, 0.15)
texture = ExtResource("10_rdh3s")

[connection signal="timeout" from="Reload_speed" to="." method="_on_reload_speed_timeout"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="timeout" from="Hitbox/Stun_timer" to="." method="_on_stun_timer_timeout"]
[connection signal="button_down" from="HUD/Shoot_button" to="." method="_on_shoot_button_button_down"]
[connection signal="button_up" from="HUD/Shoot_button" to="." method="_on_shoot_button_button_up"]
